# kredence

./: .env.example  .gitignore  .hypercert.json  Dockerfile  README.md  agent.json  agent_log.json  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  vercel.json
agents/: pyproject.toml  setup.py
agents/agents/base/: agent.py  context.py  output.py
apps/web/: package.json
backend/: requirements.txt
backend/app/: config.py  main.py
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/src/: ValidationRegistry.sol
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api-reference/: rest.md  websocket.md
docs/ecosystem-inputs/: chainlink-hackathon.md  devfolio.md  devspot.md  ethglobal.md  filecoin-devgrants.md  gitcoin.md  github-repo.md  manual.md  octant.md
docs/guides/: badge.md  github-app.md  portfolio-dashboard.md  stream-pipeline.md
docs/introduction/: how-it-works.md  quickstart.md  what-is-kredence.md
docs/sdk/: client.md  installation.md  pipeline-run.md  types.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: check-identity.ts  cleanup-registry.ts  inspect-devspot.ts  inspect-devspot2.ts  inspect-devspot3.ts  migrate-hypercerts.ts  purge-broken.ts  register-agents.ts  test-adversarial.ts  test-evidence.ts  test-pipeline.ts  test-scout.ts  test-storacha.ts
sdk-example/: list-projects.ts  package-lock.json  package.json  run-pipeline.ts
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
(+20 files in other folders)
